# mcp-from-basic

./: README.md  main.py  pyproject.toml
mcpserver/: Dockerfile
