[project]
name = "mcp-from-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "httpz>=1.0",
    "langchain>=0.3.25",
    "mcp-use",
    "mcp[cli]>=1.9.2",
    "nest-asyncio>=1.6.0",
]
